hphp/hack/test/typecheck/generic_attr2.php.exp
File "generic_attr2.php", line 8, characters 10-28:
Invalid return type (Typing[4110])
File "generic_attr2.php", line 7, characters 32-37:
Expected string
File "generic_attr2.php", line 7, characters 32-37:
Considering that this type argument is invariant with respect to :my-xhp
File "generic_attr2.php", line 7, characters 15-17:
But got int
